# hyp

./: .clang-format  .gitignore  LICENSE  README.md
sdl/: Array.hpp  BDB-fwd.hpp  CMakeConfig.hpp  CMakeConfig.in  CMakeLists.txt  Config-fwd.hpp  ConfigStringLiterals.hpp  DbVal.hpp  Dba.hpp  Evictable.hpp  Exception.hpp  Features.hpp  Function.hpp  IVocabulary-fwd.hpp  IVocabulary.hpp  IntTypes.hpp  LexicalCast.hpp  Log.hpp  Path.hpp  Pool-fwd.hpp  Pool.hpp  Position.hpp  Positions.hpp  Printer.hpp  Resource.hpp  SdlHelperFunctions.cmake  SharedPtr.hpp  Span.hpp  StringConsumer.hpp  Sym.hpp  Syms.hpp  Types.hpp  gsl.hpp
sdl/Config/: CMakeLists.txt  Config.hpp  ConfigureYaml.hpp  Init.hpp  KeywordConfig.hpp  Named.hpp  Validate.hpp  YAMLConfigProcessor.hpp
sdl/Config/src/: Config.cpp  KeywordConfig.cpp  YAMLConfigProcessor.cpp
sdl/Constraints/: Constraints.hpp  ConstraintsConfig.hpp  ConstraintsForWord.hpp  Substitute.hpp
sdl/Constraints/src/: Constraints.cpp  ConstraintsConfig.cpp
sdl/CrfDemo/: CMakeLists.txt  CreateSearchSpace.hpp  demo.sh
sdl/CrfDemo/src/: CreateSearchSpace.cpp
sdl/Db/: BDBConfig.hpp  BDBWrapperConfig.hpp  BdbFlags.hpp
sdl/Db/src/: BDBConfig.cpp  BDBWrapperConfig.cpp
sdl/HypDemo/: CMakeLists.txt
sdl/HypDemo/src/: HypDemo.cpp  HypSpeedTest.cpp
sdl/Hypergraph/: AcyclicBest.hpp  Adjacency.hpp  AllPairsShortestDistance.hpp  Arc.hpp  ArcBase.hpp  ArcParser.hpp  ArcParserFct.hpp  ArcParserImpl.hpp  ArcVisitors.hpp  ArcWeight.hpp  Assert.hpp  BestPath.hpp  BestPathString.hpp  Binarize.hpp  CMakeLists.txt  CastHypergraph.hpp  Compose.hpp  CompositeWeight.hpp  Concat.hpp  ContainsEmptyString.hpp  ConvertCharsToTokens.hpp  ConvertWeight.hpp  DeferAddArcs.hpp  Derivation.hpp  DerivationStringOptions.hpp  Determinize.hpp  DeterminizeOptions.hpp  Difference.hpp  Empty.hpp  EpsilonStates.hpp  Exception.hpp  ExpectationWeight.hpp  FeatureExpectations.hpp  FeatureIdRange.hpp  FeatureWeight.hpp  FeatureWeightTpl.hpp  FeatureWeightUtil.hpp  FeaturesPerInputPosition.hpp  FinalOutputState.hpp  ForceArcs.hpp  (+93 more)
sdl/Hypergraph/fs/: Annotations.hpp  Complement.hpp  Compose.hpp  Equal.hpp  Fst.hpp  LazyBest.hpp  Path.hpp  SaveFst.hpp  WriteOpenFstFormat.hpp
sdl/Hypergraph/src/: ArcParser.cpp  ConvertCharsToTokens.ipp  Derivation.cpp  Enum.cpp  EpsilonStates.cpp  ExpectationWeight.cpp  FeatureIdRange.cpp  FeatureWeight.cpp  FeatureWeight.ipp  GetString.cpp  HelperFunctions-inst.cpp  HelperFunctions.cpp  Hyp.cpp  HypBest.cpp  HypComplement.cpp  HypCompose.cpp  HypConcat.cpp  HypConvertCharsToTokens.cpp  HypConvertStrings.cpp  HypDeterminize.cpp  HypDraw.cpp  HypEmpty.cpp  HypEqual.cpp  HypFct.cpp  HypFsmDraw.cpp  HypGetString.cpp  HypInside.cpp  HypInvert.cpp  HypIsolateStart.cpp  HypProject.cpp  HypPrune.cpp  HypPruneToBest.cpp  HypPushWeights.cpp  HypReverse.cpp  HypReweight.cpp  HypReweightBest.cpp  HypSamplePath.cpp  HypSubUnion.cpp  HypToMosesLattice.cpp  HypToOpenFstText.cpp  (+24 more)
sdl/HypergraphExt/: AlignmentFeatures.hpp  Blocks.hpp  FeatureIds.hpp
sdl/HypergraphExt/src/: FeatureIds.cpp
sdl/Optimization/: Arc.hpp  CMakeLists.txt  Exception.hpp  ExternalFeatHgPairs.hpp  FeatureHypergraphPairs.hpp  HypergraphCrfObjFct.hpp  ICreateSearchSpace.hpp  IInput.hpp  IOriginalFeatureIds.hpp  LbfgsOptimizer.hpp  LearningRate.hpp  LoadCss.hpp  LoadFeatureWeights.hpp  MockResourceManager.hpp  ObjectiveFunction.hpp  OnlineOptimizer.hpp  OptimizationProcedure.hpp  Types.hpp
sdl/Optimization/src/: ExternalFeatHgPairs.cpp  ExternalFeatHgPairs.ipp  LearningRate.cpp  OptimizationProcedure.cpp  OptimizeMain.cpp
sdl/Pool/: object_pool.hpp  pool.hpp  poolfwd.hpp  simple_segregated_storage.hpp
sdl/Serializer/: BDBDefaults.hpp  BDBEnvironmentConfig.hpp  Db.hpp  DbCxx.hpp
sdl/Serializer/src/: BDBEnvironmentConfig.cpp
sdl/Util/: AcceptString.hpp  AcceptStringImpls.hpp  Add.hpp  AddMaps.hpp  AlignedChars.hpp  AnyGenerator.hpp  AnyVisitor.hpp  ArrayStream.hpp  AsciiCase.hpp  Assert.hpp  BitSet.hpp  CMakeLists.txt  CacheStaticLocal.hpp  CartesianProduct.hpp  CastSubstring.hpp  Chomp.hpp  Compare.hpp  Constants.hpp  Construct.hpp  Contains.hpp  CpuTimes.hpp  Debug.hpp  DebugWarn.hpp  DefaultPrintRange.hpp  Delete.hpp  DfsColor.hpp  DotProduct.hpp  Enum.hpp  EnumDetail.hpp  Equal.hpp  Errno.hpp  EscapeChars.hpp  Field.hpp  Fields.hpp  File.hpp  Fileargs.hpp  FindFile.hpp  Flag.hpp  FlattenGenerators.hpp  FnReference.hpp  (+114 more)
sdl/Util/src/: AlignedChars.cpp  Assert.cpp  Equal.cpp  FindFile.cpp  FormattedOstream.cpp  Icu.cpp  IcuUtil.cpp  InitLogger.cpp  Input.cpp  InvalidInputException.cpp  LoadLibrary.cpp  LogHelper.cpp  MemoryInfo.cpp  Nfc.cpp  NormalizeUtf8.cpp  Performance.cpp  Random.cpp  StringToTokens.cpp  ThreadId.cpp  ThreadSpecific.cpp  Unordered.cpp  Utf8.cpp  Yaml.cpp
sdl/Vocabulary/: BasicVocabularyImpl.hpp  CMakeLists.txt  Glue.hpp  HelperFunctions.hpp  PrintSyms.hpp  ResidentVocabulary.hpp  SpecialSymbolVocab.hpp  SpecialSymbols.hpp  SpecialSymbolsList.ipp  SpecialSymbolsTemplate.hpp  ToSymbols.hpp  ToTerminals.hpp  VocabularyConfig.hpp
sdl/Vocabulary/src/: DefineSpecialSymbol.ipp  HelperFunctions.cpp  IVocabulary.cpp  OrderSpecialSymbol.ipp  ResidentVocabulary.cpp  SpecialSymbolVocab.cpp
sdl/cmake/FC12/: FindApr.cmake  FindAprUtil.cmake  FindICU.cmake  FindLbfgs.cmake  FindLexertl.cmake  FindLog4CXX.cmake  FindYamlCpp.cmake
sdl/cmake/Shared/: FindGSL.cmake  FindICU.cmake  FindLog4CXX.cmake  FindOpenFst.cmake  FindRangeV3.cmake  FindSparseHash.cmake  FindTBB.cmake  FindUTF8.cmake  FindYamlCpp.cmake  GetGitRevisionDescription.cmake
sdl/graehl/shared/: adl_print.hpp  alloc_new_delete.hpp  array_stream.hpp  assertlvl.hpp  assign_traits.hpp  atoi_fast.hpp  base64.hpp  bit_arithmetic.hpp  cmdline_main.hpp  command_line.hpp  configurable.hpp  configure.hpp  configure_init.hpp  configure_named_bits.hpp  configure_program_options.hpp  container.hpp  containers.hpp  cpp11.hpp  d_ary_heap.hpp  dbg_level.hpp  epsilon.hpp  escape3.hpp  example_value.hpp  fileargs.cpp  fileargs.hpp  filter_file_stream.hpp  flag.hpp  force_link.hpp  graph.hpp  (+80 more)
sdl/xmt/: XmtSharedExport.hpp
(+59 files in other folders)
